fix full image title spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -439,6 +439,8 @@ body {
 .full-image-title {
 	font-size: var(--fs-l);
 	font-weight: var(--fw-med);
+	text-align: center;
+	max-width: 50vw;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 }
